# programming_game_

./: .gitignore  Cargo.toml  README.md
autonomous/: Cargo.toml
raven/: Cargo.toml
raven/src/: main.rs  util.rs
raven/src/bundles/: actor.rs  agent.rs  bot.rs  corpse.rs  mod.rs  projectile.rs  spawnpoint.rs  trigger.rs  wall.rs  weapon.rs
raven/src/components/: actor.rs  agent.rs  bot.rs  camera.rs  collision.rs  corpse.rs  inventory.rs  mod.rs  physics.rs  projectile.rs  spawnpoint.rs  steering.rs  trigger.rs  wall.rs  weapon.rs  world.rs
raven/src/events/: debug.rs
raven/src/game/: cooldown.rs  mod.rs  weapons.rs
raven/src/plugins/: mod.rs  states.rs
raven/src/resources/: debug.rs  game.rs  mod.rs
raven/src/states/: main.rs  mod.rs
raven/src/systems/: bot.rs  corpse.rs  input.rs  mod.rs  physics.rs  projectile.rs  steering.rs  trigger.rs  weapons.rs
soccer/: Cargo.toml  TODO.md
soccer/assets/: simulation.params
soccer/src/: TODO.md  main.rs  util.rs
soccer/src/bundles/: actor.rs  agent.rs  ball.rs  goal.rs  mod.rs  pitch.rs  team.rs
soccer/src/components/: actor.rs  agent.rs  ball.rs  goal.rs  mod.rs  obstacle.rs  physics.rs  pitch.rs  state.rs  steering.rs  team.rs
soccer/src/events/: messaging.rs  mod.rs  player.rs  team.rs
soccer/src/game/: cooldown.rs  messaging.rs  mod.rs  state.rs  team.rs
soccer/src/plugins/: debug.rs  states.rs
soccer/src/resources/: messaging.rs  mod.rs  pitch.rs  ui.rs
soccer/src/states/: intro.rs  main.rs
soccer/src/systems/: ball.rs  goal.rs  messaging.rs  mod.rs  physics.rs  steering.rs  team.rs
(+91 files in other folders)
