[package]
name = "raven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy_egui = "0.15"
bevy-inspector-egui = "0.12"
bevy_prototype_lyon = "0.6"
strum = "0.24"
strum_macros = "0.24"
