[package]
name = "soccer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_egui = "0.13"
bevy-inspector-egui = "0.10"
bevy_prototype_lyon = "0.5"
chrono = "0.4"
paste = "1.0"
rand = "0.8"
