[package]
name = "soccer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy_common_assets = { version = "0.3.0", features = ["ron"] }
bevy_egui = "0.15"
bevy-inspector-egui = "0.12"
bevy_prototype_lyon = "0.6"
chrono = "0.4"
paste = "1.0"
rand = "0.8"
serde = "1.0"
